--- a/meetapp-fe/package.json
+++ b/meetapp-fe/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "firebase": "^8.6.8",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
