dev: se agrega funcionallidades a vista mis reservas.

--- a/meetapp-fe/.env
+++ b/meetapp-fe/.env
@@ -1,2 +1,4 @@
 REACT_APP_AUTH0_DOMAIN=dev-conrado.us.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=fNwVmgXAVJxMtAPibY8sp0kBgAInLm3F
+REACT_APP_AUTH0_AUDIENCE=http://localhost:5000
+REACT_APP_SERVER_URL=http://localhost:5000
