--- a/meetapp-fe/package.json
+++ b/meetapp-fe/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "firebase": "^8.6.8",
     "jquery": "^3.6.0",
+    "json-server": "^0.16.3",
     "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
@@ -23,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject", 
+    "api":"json-server --watch src/api/db.json --port 5000 --routes src/api/routes.json" 
   },
   "eslintConfig": {
     "extends": [
