--- a/meetapp-fe/package.json
+++ b/meetapp-fe/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.6.0",
+    "@sweetalert2/theme-bootstrap-4": "^5.0.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -18,14 +19,17 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sweetalert2": "^11.1.7",
+    "sweetalert2-react-content": "^4.1.1",
+    "uniqid": "^5.4.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject", 
-    "api":"json-server --watch src/api/db.json --port 5000 --routes src/api/routes.json" 
+    "eject": "react-scripts eject",
+    "api": "json-server --watch src/api/db.json --port 5000 --routes src/api/routes.json"
   },
   "eslintConfig": {
     "extends": [
